--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css" />
 </head>
 <body>
-<h1>Hello world!...</h1>
-<p>This is the first file in my new Git Repo.</p>
-<p>New changes to be stashed</p>
-<p>Extra line 1</p>
-<p>Extra-Line2</p>
+<h1>Hello world!</h1>
+<div><img src="img_hello_world.jpg" alt="Hello World from space" style="width:100%;max-width:640px"/></div>
+<p>This is the first file in my new GIT Repo.</p>
+<p>This line is here to show how merging works.</p>
+<div><img src="ïmg_hello_git.jpg" alt="Hello GIT" style="width:100%;max-width:640px"/></div>
 </body>
+
 </html>
